--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
-.App {
-  text-align: center;
+.btn{
+  background-color: #4a4a4a;
+  color: #ffffff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.xyz{
+  background-color: steelblue;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+
+.sym{
+  background-color: #4a4a4a;
+  color: black;
+}
+
+body {
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+  font-size: 28px;
+}
+body {
+  background-color: #f5f5f5;
+}
+.calculator {
+  border-radius: 10px;
+  box-shadow: 0 25px 60px -10px rgba(0,0,0,0.5);
+  .header {
+  background-color: #000;
+  border-radius: 10px 10px 0 0;
+
+  .window {
+      span {
+          border-radius: 50%;
+          &.red {
+          background-color: #ff5252;
+          }
+          &.yellow {
+          background-color: #f5a623;
+          }
+          &.green {
+          background-color: #73c21d;
+          }
+      }
+  }
+  .input {
+      color: #4a4a4a;
+      text-align: right;
+      padding: 10px 30px;
+      span {
+          color: #ffffff;
+      }
+  }
+  }
+  .keys {
+  background: linear-gradient(135deg, #3a3a3a, #000000);
+  border-radius: 0 0 10px 10px;
+  .row {
+      .number {
+          color: #ffffff;
+      }
+      .symbol {
+          background-color: #ffffff;
+          &.action {
+          background: linear-gradient(60deg, #ff0300, #ffa100);
+          border-radius: 0 0 10px 0;
+          color: #ffffff;
+          box-shadow: 0 25px 60px -10px rgba(255, 10, 0, 0.5);
+          }
+      }
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.dull {
+font-weight: bold;
+color: #4a4a4a;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p.credit {
+bottom: 10px;
+right: 10px;
+margin:0;
+opacity:0.8;
 }
